# KidPalAI

./: .gitignore  CLAUDE.md  LICENSE  README.md  check_container.py  check_logs.py  deploy_llm.py  docker-compose.yml  test_e2e.py  test_e2e2.py  test_e2e3.py  test_llm.py  test_stream.py
docs/: OVERVIEW.md  (+2 more)
firmware-mimiclaw/main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
firmware-mimiclaw/main/agent/: agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
firmware-mimiclaw/main/audio/: audio_input.c  audio_input.h  audio_output.c  audio_output.h  vad.c  vad.h
firmware-mimiclaw/main/audio_task/: audio_task.c  audio_task.h
firmware-mimiclaw/main/bus/: message_bus.c  message_bus.h
firmware-mimiclaw/main/cli/: serial_cli.c  serial_cli.h
firmware-mimiclaw/main/config/: config_server.c  config_server.h  config_store.c  config_store.h
firmware-mimiclaw/main/cron/: cron_service.c  cron_service.h
firmware-mimiclaw/main/gateway/: ws_server.c  ws_server.h
firmware-mimiclaw/main/heartbeat/: heartbeat.c  heartbeat.h
firmware-mimiclaw/main/led/: led.c  led.h
firmware-mimiclaw/main/llm/: llm_proxy.c  llm_proxy.h
firmware-mimiclaw/main/memory/: memory_store.c  memory_store.h  session_mgr.c  session_mgr.h
firmware-mimiclaw/main/onboard/: onboard_html.h  wifi_onboard.c  wifi_onboard.h
firmware-mimiclaw/main/ota/: ota_manager.c  ota_manager.h
firmware-mimiclaw/main/proxy/: http_proxy.c  http_proxy.h
firmware-mimiclaw/main/skills/: skill_loader.c  skill_loader.h
firmware-mimiclaw/main/tools/: gpio_policy.c  gpio_policy.h  tool_cron.c  tool_cron.h  tool_files.c  tool_files.h  tool_get_time.c  tool_get_time.h  tool_gpio.c  tool_gpio.h  tool_registry.c  tool_registry.h  tool_web_search.c  tool_web_search.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  audio_input.c  audio_input.h  audio_output.c  audio_output.h  config_server.c  config_server.h  config_store.c  config_store.h  idf_component.yml  led.c  led.h  main.c  voice_upload.c  voice_upload.h  wifi.c  wifi.h
(+81 files in other folders)
